# kelimelik-web

./: .editorconfig  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  app.py  devices.json  kelimelik_solver.py  requirements.txt
backend/processing/: gemini_batch.py
frontend/: index.html  kelimelik-config.json  kelimelik-solver.js  main.js  style.css  tr-dictionary.json
